# ClimaRAG

./: .env  .gitignore  README.md  README_CN.md  pyproject.toml  requirements.txt  setup.py
assets/: RagPipeline.drawio
assets/development_notebooks/: main.ipynb
assets/docs/: README_CN.md  data_description.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  api.js  index.css  streamWorker.js  utils.js
frontend/src/components/: ChatInput.jsx  ChatMessages.jsx  Chatbot.jsx  Sidebar.jsx
frontend/src/hooks/: useAutoScroll.js
python/: main.ipynb  setup.py
python/playground/: SpacyEmbeddings.ipynb
python/tools/: customllm.py
src/: .env.example  app.py  main.py  requirements.txt  setup.py
src/api/: models.py  routes.py
src/config/: prompt_settings.py  settings.py
src/core/: logic.py
src/custom/: parsers.py  retrievers.py  search.py
src/custom_classes/: custom_chat_model.py  customllm.py
src/custom_imported_classes/: search.py
src/models/: data_models.py  history_models.py
src/services/: business_logic.py  data_processor.py  memory_manager.py  system_manager.py
src/tests/: evaluate.py  query.py  quick_test.py  test_system_manager.py
src/tools/: customllm.py
src/utils/: helpers.py
